# NTNU-CIDS

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
cogs/: add.py  check.py  delete.py  hello.py  info.py
