[tool.poetry]
name = "ntnu-cids"
version = "0.1.0"
description = ""
authors = ["KutsunaSubarya"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
selenium = "4.18.1"
requests = "2.31.0"
selenium-wire = "5.1.0"
opencv-python = "4.9.0.80"
python-dotenv = "1.0.1"
"discord.py" = "2.3.2"
pillow = "10.2.0"
blinker = "1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
